fix: Resolve contact page UI bug on smaller screens

--- a/src/components/Contact/styles.scss
+++ b/src/components/Contact/styles.scss
@@ -159,12 +159,12 @@
 /* Mobile */
 @media (max-width: 768px) {
     #contact {
-        height: 100vh;
+        height: 90vh;
         flex-wrap: wrap;
         .left {
             width: 100%;
             height: 50vh;
-            margin-top: 40px;
+            margin: 0 auto;
 
             form label input, form textarea {
                 width: 90vw;
@@ -181,7 +181,7 @@
             flex-direction: row;
             flex-wrap: nowrap;
             justify-content: center;
-            margin-bottom: 40px;
+            margin: 0;
             padding-block: 0;
             padding-inline: 20%;
             border-top: 2px solid white;
